--- a/nx-angular/package.json
+++ b/nx-angular/package.json
@@ -6,9 +6,10 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "nx serve",
+    "build": "ng build --prod && nx build nest-backend --prod",
+    "serve:dist": "node dist/apps/nest-backend/main.js",
+    "test": "nx test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -37,7 +38,12 @@
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "2.1.4",
     "@nrwl/angular": "11.2.10",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
@@ -50,11 +56,15 @@
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "^11.0.0",
     "@angular/language-service": "^11.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "11.2.10",
     "@nrwl/cypress": "11.2.10",
     "@nrwl/eslint-plugin-nx": "11.2.10",
     "@nrwl/jest": "11.2.10",
     "@nrwl/linter": "11.2.10",
+    "@nrwl/nest": "11.2.10",
+    "@nrwl/node": "11.2.10",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "11.2.10",
     "@nrwl/workspace": "11.2.10",
