--- a/nx-angular/package.json
+++ b/nx-angular/package.json
@@ -7,7 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "nx serve",
-    "build": "ng build --prod && nx build nest-backend --prod",
+    "build": "ng build --prod && nx build nest-backend --prod && mv dist/apps/nest-backend api",
     "serve:dist": "node dist/apps/nest-backend/main.js",
     "test": "nx test",
     "lint": "nx workspace-lint && ng lint",
